# sensor-bridge

./: .gitignore  API.md  CHANGELOG.md  CLIENT_DISCOVERY_IMPLEMENTATION.md  Cargo.toml  HTTP_SERVER_API.md  README.md  renovate.json
.github/: copilot-instructions.md
.github/helper/: set-asset-url-to-readme.sh  upload-github-release-asset.sh
.github/readme/: architecture.psd  dl-button.psd
.github/scripts/: upload-asset-to-release.ps1  upload-asset-to-release.sh
.github/updater/: build_update_json.sh
.github/workflows/: pipeline.yaml
memory-bank/: active-context.md  decision-log.md  frontend-backend-command-analysis.md  product-context.md  progress.md  system-patterns.md
src/: aida64.rs  aida_wmi.rs  i2c_display.rs  index.html  lcd_preview.css  lcd_preview.html  main.js  main.rs  main_test.rs  script.js  serial_port.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: aida64.rs  conditional_image.rs  config.rs  cpu_sensor.rs  export_import.rs  fonts.rs  fonts_test.rs  http_server.rs  image_processor.rs  lcd_preview.rs  linux_amdgpu.rs  linux_dmidecode_sensors.rs  linux_gpu.rs  linux_lm_sensors.rs  linux_mangohud.rs  linux_system_sensors.rs  main.rs  misc_sensor.rs  net_port.rs  sensor.rs  serial_port.rs  static_image.rs  system_stat_sensor.rs  text.rs  utils.rs  windows_libre_hardware_monitor_sensor.rs
src/js/: app-state.js  base.js  client-management.js  config-management.js  constants.js  dom-elements.js  element-management.js  i2c.js  lcd.js  main.js  sensor-selection.js  ui-utils.js
