[package]
name = "aida64-sensor-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Read sensor values
wmi = "0.11.4"
serde = "1.0.152"
serde_json = "1.0.91"

# Write to serial port
serialport = "4.2.0"

# Write to i2c display
ssd1306 = "0.7.1"
linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }
embedded-graphics = "0.7.1"