[package]
name = "sensor-bridge"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
sensor-core = "1.12.5"                                                                                      # Sensor core library
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }                                                                  # Serialization
serde_json = "1.0.114"                                                                                                  # De/Serialize to json
bincode = "1.3.3"                                                                                                     # De/Serialize to binary
tauri = { version = "1.6.1", features = ["updater", "protocol-all", "dialog-all", "shell-open", "system-tray", "window-all"] } # Tauri
systemstat = "0.2.3"                                                                                                  # read common system sensor values
rayon = "1.9.0"                                                                                                       # Parallel processing
base64 = "0.21.7"                                                                                                     # Base64 encoding
message-io = { version = "0.18.1", default-features = false, features = ["tcp"] }                                     # TCPSocket communication
uuid = { version = "1.7.0", features = ["v4"] }                                                                       # Generate UUID v4
image = "0.24.9"                                                                                                      # Image processing
imageproc = { version = "0.23.0", features = ["rayon"] }                                                              # More image processing
chrono = "0.4.34"                                                                                                      # Time handling
log = "0.4.21"                                                                                                         # Logging
env_logger = "0.11.3"                                                                                                 # Logging
super-shell = "1.2.3"                                                                                                 # Privileged shell execution
dns-lookup = "2.0.4"                                                                                                  # DNS lookup
zip-extract = "0.1.3"                                                                                                 # Zip file handling
font-loader = { git = "https://github.com/matprec/rust-font-loader" }                                               # System font loading
rusttype = "0.9.3"                                                                                                    # Font parsing
ureq = { version = "2.9.6", features = ["json"] }                                                                     # HTTP client requests
dirs = "5.0.1"                                                                                                        # System directories

[dev-dependencies]
assertor = "0.0.2"
pretty_assertions = "1.4.0"

# Linux specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
lm-sensors = "0.2.1"                                                                                                  # Read sensor values from lm-sensors
dmidecode = "0.8.0"                                                                                                   # Read linux system information from dmidecode

# Windows specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13.3"                                                                                                        # Read sensor values from WMI

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
